3.0.0/_sources/index.rst.txt
MantidImaging
=============

Mantid Imaging is a graphical toolkit for performing 3D reconstruction of neutron tomography data. It provides an easy-to-use graphical interface to a wide range of pre/post-processing operations, tilt correction, and reconstruction algorithms, accommodating for tomography users with varying data complexity and image analysis background knowledge. It utilizes a flexible plugin system that allows easy integration of external software, and has allowed us to re-use software widely known in the neutron tomography community.

For more information, see the :ref:`overview`.

.. figure:: _static/main_window.png
   :alt: Main Window
   :align: center
   :width: 100%


.. grid:: 1 1 2 2
    :gutter: 4

    .. grid-item-card:: 👩‍🔬
        :link: user_docs/index
        :link-type: doc
        :text-align: center

        **User Documentation**

        Documentation for using Mantid Imaging.

    .. grid-item-card:: 👨‍💻
        :link: developer_docs/index
        :link-type: doc
        :text-align: center

        **Developer Documentation**

        Documentation for contributing to Mantid Imaging development.

.. button-ref:: installation
   :color: primary
   :expand:

   🚀 Install MantidImaging


.. toctree::
   :maxdepth: 1
   :caption: Contents:
   :hidden:

   Overview <user_docs/explanations/overview>
   Installation <user_docs/tutorials/installation>
   User Doc <user_docs/index>
   Developer Doc <developer_docs/index>
   API <api>
   Release Notes <release_notes/index>
   Troubleshooting <troubleshooting>


.. toctree::
   :caption: Links:

   Code Repository <https://github.com/mantidproject/mantidimaging>
   Anaconda Package <https://anaconda.org/mantidimaging/mantidimaging>

Please cite as:
Akello-Egwel, Dolica; Allen, Jack; Baust, Rachel; Gigg, Martyn; Jones, Samuel; Meigh, Ashley; Nixon, Daniel; Stock, Samuel; Sullivan, Michael; Tasev, Dimitar; Taylor, Will; Tygier, Sam. (2024). Mantid Imaging (2.8.0), Zenodo https://doi.org/10.5281/zenodo.4728059

(See `Zenodo <https://doi.org/10.5281/zenodo.4728059>`_ for citing specific versions).
